hphp/hack/test/typecheck/reactive/mutable_as_hint7.php.like_types.exp
File "mutable_as_hint7.php", line 13, characters 18-19:
Variable `$z` is undefined, not always defined, or unset afterwards. (Naming[2050])
File "mutable_as_hint7.php", line 10, characters 50-51:
Did you mean `$a` instead?
